tests/baselines/reference/interfacedeclWithPredicatesObjectError2.errors.txt
tests/cases/compiler/interfacedeclWithPredicatesObjectError2.ts(12,5): error TS2322: Type '{ userid: number; }' is not assignable to type 'PrivateMessage'.
  Predicate present(text) was not satisfied in type { userid: number; }
    Property 'text' is missing in type '{ userid: number; }'.


==== tests/cases/compiler/interfacedeclWithPredicatesObjectError2.ts (1 errors) ====
    
    interface PrivateMessage{
        userid?: any;
        screenname?: any;
        text?: any;
    } constrains {
        or(and(present(userid), not(present(screenname))),
        and(present(screenname), not(present(userid))));
    present(text);
    }
    
    let object: PrivateMessage = {userid: 25};
        ~~~~~~
!!! error TS2322: Type '{ userid: number; }' is not assignable to type 'PrivateMessage'.
!!! error TS2322:   Predicate present(text) was not satisfied in type { userid: number; }
!!! error TS2322:     Property 'text' is missing in type '{ userid: number; }'.